kubernetes/cilium/examples/networkpolicy/allow-egress-cidr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-cidr
spec:
  endpointSelector:
    matchLabels:
      app: curl-test
  egress:
    - toCIDR:
        - 1.1.1.1/32
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
