kubernetes/cilium/examples/networkpolicy/deny-all-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-egress
spec:
  endpointSelector:
    matchLabels:
      app: curl-test
  egressDeny:
    - toCIDR:
        - 0.0.0.0/0
